<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Register2ndActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/img_signup2nd_BackBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="8dp"
            android:contentDescription="@string/back"
            app:tint="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/txt_signup2nd_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/txt_signup2nd_Step"
                android:layout_toStartOf="@+id/txt_signup2nd_Step"
                android:text="@string/create_acc"
                android:textColor="@color/black"
                android:fontFamily="@font/muli_black"
                android:textSize="32sp"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/txt_signup2nd_Step"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_drawable"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/muli_black"
                android:gravity="center"
                android:text="@string/step_2_2"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:targetApi="lollipop" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_gender"
                android:textColor="@color/grey"
                android:fontFamily="@font/muli_black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rg_signup2nd_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <RadioButton
                    android:id="@+id/rd_signup2nd_Male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_male"
                    android:buttonTint="@color/colorPrimary"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/rd_signup2nd_Female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_female"
                    android:buttonTint="@color/colorPrimary"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/rd_signup2nd_Other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_other"
                    android:buttonTint="@color/colorPrimary"
                    tools:targetApi="lollipop" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEEEE"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_dob"
                android:textColor="@color/grey"
                android:fontFamily="@font/muli_black"
                android:textSize="16sp" />

            <DatePicker
                android:id="@+id/dt_signup2nd_DOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup2nd_Complete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/btn_complete"
            android:textColor="@color/white"
            android:background="@drawable/corner_border_primary"
            app:backgroundTint="@color/colorPrimary"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

    </LinearLayout>
</ScrollView>