<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity"
    android:background="@color/white"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:id="@+id/img_welcome_Logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/app_logo"
            android:scaleType="centerInside"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/function"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/slogan"
            android:fontFamily="@font/muli"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_welcome_Login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/corner_border_primary"
            android:text="@string/login"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary"
            android:transitionName="transition_login"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:elevation="4dp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_welcome_SignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/corner_border_white"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/white"
            android:transitionName="transition_signup"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:elevation="2dp"
            tools:targetApi="lollipop" />

    </LinearLayout>

</RelativeLayout>
